--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "redux-thunk": "^3.1.0",
     "redux-toolkit": "^1.1.2",
+    "slick-carousel": "^1.8.1",
     "start": "^5.1.0",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
