--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.1",
     "concurrently": "^8.2.2",
+    "i18next": "^23.14.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^15.0.1",
     "react-icons": "^5.2.1",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
