--- a/Server/.env
+++ b/Server/.env
@@ -1,6 +1,6 @@
 PORT = 4000
 
-MONGO_DB_URL = mongodb+srv://ewaste:ewaste@cluster0.bceqjnt.mongodb.net/E-waste?retryWrites=true&w=majority
+MONGO_DB_URL = mongodb+srv://ewaste:ewaste@cluster0.boilvyb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET = ewaste
 
