Now Header are resposive for all devices

--- a/Server/.env
+++ b/Server/.env
@@ -1,6 +1,6 @@
 PORT = 4000
 
-MONGO_DB_URL = mongodb+srv://ewaste:ewaste@cluster0.boilvyb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_DB_URL = mongodb+srv://uniquecoder:uniquecoder@cluster0.m0x2s.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET = ewaste
 
