--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.1",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
+    "firebase": "^11.0.0",
     "i18next": "^23.14.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.1",
