--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.1",
     "concurrently": "^8.2.2",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "firebase": "^11.0.0",
+    "framer-motion": "^11.11.17",
     "i18next": "^23.14.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.1",
