--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.1",
+    "chart.js": "^4.4.6",
     "concurrently": "^8.2.2",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
@@ -19,6 +20,7 @@
     "i18next-http-backend": "^2.6.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
