--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "e_waste_trade_hub",
   "version": "0.1.0",
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.1.5",
