--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "firebase": "^11.0.0",
+    "firebase-functions": "^6.1.0",
     "framer-motion": "^11.11.17",
     "i18next": "^23.14.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.1",
     "jwt-decode": "^4.0.0",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
