--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "redux-toolkit": "^1.1.2",
     "slick-carousel": "^1.8.1",
     "start": "^5.1.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
