--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.1",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
