--- a/Server/package.json
+++ b/Server/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.3.4",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "socket.io": "^4.8.1"
   }
 }
